--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -413,7 +413,7 @@ Andere Adresse zuweisen:
 . Klicke bei der Rechnungs- bzw. Lieferadresse auf das Kontextmenü (material:more_vert[]).
 . Wähle die Option *Adresse ändern* (material:social_distance[]). +
 → Ein Fenster mit den bereits verfügbaren Adressen wird geöffnet.
-. Klicke rechts in der Zeile der gewünschten Adresse auf *Adresse zuweisen* (material:add_link). +
+. Klicke rechts in der Zeile der gewünschten Adresse auf *Adresse zuweisen* (material:add_link[]). +
 → Die gewählte Adresse wird als neue Adresse zugewiesen.
 
 *_Hinweis:_* Ist ein Auftrag gesperrt, können nur die folgenden Felder geändert werden: +
