ADD more changes

--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -28,6 +28,11 @@ Using group functions:
 . Select (material:done[]) all orders for which you want to carry out a certain action at once.
 . Select one of the available group functions. Pay attention to the explanations given in <<table-order-group-functions>>.
 
+[TIP]
+.Select default group functions
+In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order overview you can determine
+*Default group functions* that become directly visible when selecting orders. All remaining group functions will automatically be added to the context menu (material:more_vert[]).
+
 [[table-order-group-functions]]
 .Group functions for orders
 [cols="2,1,6a"]
@@ -103,6 +108,9 @@ On the right-hand side of the order overview, further functions are available. T
 |Deletes the order. Note that some orders cannot be deleted.
 
 |===
+
+[TIP]
+In the side navigation on the bottom left of an order, you can click on the order ID (material:content_copy[]) to copy the ID of the order to the clipboard.
 
 [#order-areas]
 == Details about the individual areas
@@ -207,7 +215,7 @@ The *Status and tags* area provides information about the order status and the s
 |===
 |Setting |Explanation
 
-| *Status*
+| *Order status*
 |Shows the status the order is in. +
 If needed, select another order status from the drop-down list. +
 *_Note:_* The order status *[7] Outgoing items booked* cannot be changed to a lower status because the items have already been shipped. However, if you still want to change the status, then you first need to reset the outgoing items that were booked.
@@ -245,7 +253,7 @@ Note that you need to have created templates in order to generate documents and 
 |Select a customized date. +
 *_Note:_* You can add a maximum of 5 dates.
 
-| *Status*
+| *Order status*
 |Select a status from the drop-down list.
 
 | *Client*
@@ -376,6 +384,43 @@ The following fields are available: +
 
 |===
 
+==== Changing an address
+
+In addresses, you can either change single fields of the current address or you can even assign a new address that already exists. Proceed as described below to change an address.
+
+[.instruction]
+Changing single fields of an address:
+
+. Go to *Orders » Orders (Test phase)*.
+. Carry out the search (material:search[]) to display orders.
+. Open the order in which you want to change an address.
+. Go to the *Addresses* area.
+. On the invoice or delivery address, click on the context menu (material:more_vert[]).
+. Select the option *Edit address* (material:edit[]). +
+→ The address settings open.
+. Carry out the changes.
+. *Save* (material:save[]) the settings. +
+→ The address is updated according to your settings.
+
+
+[.instruction]
+Assigning another address:
+
+. Go to *Orders » Orders (Test phase)*.
+. Carry out the search (material:search[]) to display orders.
+. Open the order in which you want to change an address.
+. Go to the *Addresses* area.
+. On the invoice or delivery address, click on the context menu (material:more_vert[]).
+. Select the option *Change address* (material:social_distance[]). +
+→ A window with the already existing addresses opens.
+. On the right in the line of the desired address, click on *Assign address* (material:add_link[]). +
+→ The selected address is assigned.
+
+*_Note:_* If an order is locked, only the following fields can be changed: +
+
+* Invoice address: *Email address* and *Telephone number*
+* Delivery address: all fields except for *VAT number* and *Country*
+
 [#area-order-items]
 === Area: Order items
 
@@ -395,7 +440,7 @@ This is a default column.
 |Shows the item ID of this order item. You can open the item by clicking on the ID. +
 This is an optional column.
 
-| *Variation No*
+| *Variation no.*
 |Shows the variation number of this order item. +
 This is an optional column.
 
@@ -474,7 +519,7 @@ This is a default column.
 [discrete]
 ==== Editing items
 
-In the *Order items* area, you can edit the items of the orders. Note that this depends on the order type. To do so, click on the pencil (material:edit[]) on the left-hand side. The following table lists the available fields. Note that there are different fields available, depending on the order type.
+In the *Order items* area, you can edit the items of the orders. Note that this depends on the order type. To do so, click on *Edit items* (material:edit[]) on the left. The following table lists the available fields. Note that there are different fields available, depending on the order type.
 
 [[table-edit-items]]
 .Editing items
@@ -490,7 +535,7 @@ In the *Order items* area, you can edit the items of the orders. Note that this 
 |Shows the variation ID. +
 This is a default column.
 
-| *Variation No*
+| *Variation no.*
 |Shows the variation number.
 
 | *Item name*
@@ -545,7 +590,7 @@ You can open the variation by clicking on the ID.
 | *Item ID* / *Variation ID*
 |Shows both the item ID and the variation ID.
 
-| *Variation No*
+| *Variation no.*
 |Shows the number of the variation.
 
 | *Item name*
@@ -762,7 +807,7 @@ In the *Assigned payments* area, you can see all information about the payments 
 | *Amount*
 |Shows the amount.
 
-| *Status*
+| *Order status*
 |Displays the current status.
 
 | *Reason for payment*
@@ -786,6 +831,9 @@ In the *Assigned payments* area, you can see all information about the payments 
 
 The area *Order references* provides information that are related to the order. Via *Configure columns* (material:settings[]) you can adjust the columns as desired.
 
+[TIP]
+Define in the editing mode whether the currency is the *System currency* or the *Order currency*.
+
 [[table-order-references]]
 .Settings in the *Order references* area
 [cols="1,3"]
@@ -804,7 +852,7 @@ The area *Order references* provides information that are related to the order. 
 | *Document*
 |Displays the number of the main document.
 
-| *Status*
+| *Order status*
 |Displays the status of the editing process.
 
 | *Created*
@@ -843,7 +891,7 @@ In the *Properties* area, you can see the properties of the order items. Via *Co
 | *Value*
 |Displays the value of the order item property.
 
-| *Created at*
+| *Creation date*
 |Displays the date and time of the order item property’s creation.
 
 | *Last change*
@@ -915,7 +963,7 @@ In the *History* area you get an overview of all previous actions as well as the
 | *Procedure*
 |Displays the procedure that was carried out.
 
-| *Status*
+| *Order status*
 |Displays the current status.
 
 |===
