--- a/docs/en-gb/modules/orders/pages/order-types.adoc
+++ b/docs/en-gb/modules/orders/pages/order-types.adoc
@@ -16,3 +16,7 @@ The following order types are available in plentymarkets.
 * xref:orders:order-type-multi-order.adoc#[Multi-order]
 * xref:orders:order-type-multi-credit-note.adoc#[Multi credit note]
 * xref:orders:order-type-advance-order.adoc#[Advance order]
+
+[TIP]
+.Customising the view of order types
+Via the xref:orders:design-order-view.adoc#editing-mode[editing-mode] you can customise the view of each order type according to your needs. You can for example select, which fields are visible in the different xref:orders:working-with-orders.adoc#order-areas[areas].
