ADD procedure add remove tags

--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -3,7 +3,7 @@
 :id: 93G3IG4
 :author: team-docs-automation
 
-Diese Handbuchseite beschreibt die Arbeitsschritte, die du für Prozesse einrichten kannst. Für einen Prozess kannst du beliebig viele Arbeitsschritte erstellen. 
+Diese Handbuchseite beschreibt die Arbeitsschritte, die du für Prozesse einrichten kannst. Für einen Prozess kannst du beliebig viele Arbeitsschritte erstellen.
 
 Je nach Typ des Arbeitsschrittes stehen mehr oder weniger detaillierte Einstellungsmöglichkeiten zur Verfügung. Diese bestehen in erster Linie aus Aktionen und Subaktionen, die hintereinander geschaltet werden und als Prozess endlos oder manuell gesteuert ablaufen. Dabei sind auch Filter auswählbar, die für Arbeitsschritte sehr individuelle Einstellungen ermöglichen.
 
@@ -123,8 +123,7 @@ Filtere danach optional weiter nach einem bestimmten *Lagerort*.
 |Wähle, ob nach Aufträgen mit Expressversand gefiltert werden soll. +
 *Ja* = Es wird nach Aufträgen mit Expressversand gefiltert +
 *Nein* = Es wird nach Aufträgen ohne Expressversand gefiltert +
-*_Wichtig_:* Damit dieser Filter korrekt funktioniert, muss im xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] der jeweiligen Aufträge die 
-Option *Expressversand* aktiviert sein.
+*_Wichtig_:* Damit dieser Filter korrekt funktioniert, muss im xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] der jeweiligen Aufträge die Option *Expressversand* aktiviert sein.
 
 | *Gesamt-Artikelmenge*
 |Wähle einen *Operator* aus der Dropdown-Liste und gib einen Wert in das Feld dahinter ein. So werden nur Aufträge gefiltert, die eine bestimmte Stückzahl einzelner Artikel enthalten.
@@ -248,6 +247,13 @@ Damit du die Aufträge, die den Prozess durchlaufen haben, erkennst, weist du di
 
 | *Neue Markierung*
 |Wähle die gewünschte Markierung aus der Dropdown-Liste, wenn durch diesen Arbeitsschritt die Markierung der Aufträge geändert werden soll.
+
+| *Tags hinzufügen*
+|Wähle die Tags, die zum Auftrag hinzugefügt werden sollen.
+
+| *Tags entfernen*
+|Wähle die Tags, die aus dem Auftrag entfernt werden sollen.
+
 |====
 
 [#auftragsabwicklung-sortierung]
@@ -510,7 +516,7 @@ Mit dem *grünen Plus* fügst du eine *Aktion* oder eine *Subaktion* hinzu, inde
 
 Mit Filtern bestimmst du genau, welche Aufträge mit dem Arbeitsschritt *Auftragsbearbeitung* bearbeitet werden.
 
-Für den Arbeitsschritt *Auftragsbearbeitung* sind die gleichen Filter verfügbar, die in <<table-work-step-filter>> beschrieben sind. 
+Für den Arbeitsschritt *Auftragsbearbeitung* sind die gleichen Filter verfügbar, die in <<table-work-step-filter>> beschrieben sind.
 
 Weitere Filter, die du in Verbindung mit dem Arbeitsschritt *Auftragsbearbeitung* nutzen kannst, werden in <<table-additional-filters>> beschrieben.
 
@@ -532,7 +538,7 @@ Weitere Filter, die du in Verbindung mit dem Arbeitsschritt *Auftragsbearbeitung
 
 | *Anzahl Auftragspositionen*
 |Wähle einen Operator aus gib einen Wert im Textfeld ein, um nach der Gesamtanzahl der Auftragspositionen pro Auftrag zu filtern. +
-*Beispiel:* Zum Filtern von Aufträgen mit weniger als 10 Auftragspositionen *10* in das Textfeld eingeben und den Operator *<* wählen. 
+*Beispiel:* Zum Filtern von Aufträgen mit weniger als 10 Auftragspositionen *10* in das Textfeld eingeben und den Operator *<* wählen.
 
 | *Gesamt-Artikelmenge*
 |Wähle einen Operator aus gib einen Wert im Textfeld ein, um nach der Gesamtanzahl der Artikel pro Auftrag zu filtern.
