--- a/docs/de-de/modules/automatisierung/pages/subaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/subaktionen.adoc
@@ -618,6 +618,36 @@ Einstellungen
 |Status aus der Dropdown-Liste wählen, der durch die Subaktion zugewiesen werden soll.
 |====
 
+[#300]
+=== Tags hinzufügen/entfernen
+
+Mit der Subaktion *Tags hinzufügen/entfernen* fügst du Tags zu einem Auftrag hinzu oder entfernst Tags aus einem Auftrag.
+
+[.subhead]
+Aktionen
+
+Die Subaktion steht für folgende Aktionen zur Verfügung:
+
+* xref:automatisierung:aktionen.adoc#170[Auftrag]
+
+[.subhead]
+Einstellungen
+
+<<table-sub-procedure-add-remove-tags>> erläutert die zusätzlichen Einstellungen der Subaktion. Informationen zu den allgemeinen Einstellungen für Subaktionen findest du in <<table-sub-procedures-general-settings>>.
+
+[[table-sub-procedure-add-remove-tags]]
+.Subaktion *Tags hinzufügen/entfernen*
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Ausgewählte Tags*
+|Wähle aus der Dropdown-Liste, ob du Tags hinzufügen oder entfernen möchtest.
+
+| *Tags*
+|Klicke in das Feld, um Tags zu wählen. Je nach Einstellung werden diese Tags zum Auftrag hinzugefügt oder aus dem Auftrag entfernt.
+|====
+
 [#310]
 === Versandpakete
 
