Fix links from google sheet

--- a/docs/de-de/modules/webshop/pages/mandanten-verwalten.adoc
+++ b/docs/de-de/modules/webshop/pages/mandanten-verwalten.adoc
@@ -123,7 +123,7 @@ Weitere Mandanten einrichten:
 
 | *Seite Bankdaten*
 |Wählen, welche Seite die xref:payment:bankdaten-verwalten.adoc#[Bankdaten] enthält. Diese Seite wird als Teil der Bestellbestätigung im Webshop angezeigt. +
-*_Wichtig:_* Wird diese Einstellung verwendet, unter <<payment/zahlungsarten-verwalten#, System » Aufträge » Zahlung » Zahlungsarten>> bei den Zahlungsarten *Rechnung* und *Vorkasse* die Option *Bankdaten anzeigen* aktivieren.
+*_Wichtig:_* Wird diese Einstellung verwendet, unter xref:payment:zahlungsarten-verwalten.adoc#[Einrichtung » Aufträge » Zahlung » Zahlungsarten] bei den Zahlungsarten *Rechnung* und *Vorkasse* die Option *Bankdaten anzeigen* aktivieren.
 
 2+^|Menü <<webshop/webshop-einrichten/bestellvorgang#, Bestellvorgang » Grundeinstellungen>>
 
