--- a/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
+++ b/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
@@ -48,7 +48,7 @@ Refer to the chapter <<#650, Assigning rights for back end users for roles, stat
 
 Before you are able to use the ticket system, you have to carry out some basic settings in your system:
 
-* Create <<#700, roles>>, <<#800, types>>, <<#900, statuses>>, <<#1000, status groups>>, <<#1100, topics>> and <<#create-tags-tickets, tags>> for your ticket system.
+* Create <<#700, roles>>, <<#800, types>>, <<#900, statuses>>, <<#1000, status groups>>, <<#1100, topics>> and <<#create-tags-ticket, tags>> for your ticket system.
 
 * Set up your <<#2100, email account>> in the *Setup » CRM » Ticket system » Email accounts* menu to ensure that your emails are automatically converted into tickets. 
 
@@ -384,7 +384,7 @@ This is a mandatory field. If no owner is selected, the ticket cannot be created
 This is a mandatory field. If no title is selected, the ticket cannot be created.
 
 | *Tags*
-|Click to add tags. You can select the tags that you set up in the *Setup » Settings » Tags* menu. For further information, refer to the <<#create-tags-tickets, Creating tags for tickets>> chapter.
+|Click to add tags. You can select the tags that you set up in the *Setup » Settings » Tags* menu. For further information, refer to the <<#create-tags-ticket, Creating tags for tickets>> chapter.
 
 | *Folder*
 |Select a folder from the drop-down list. You can select the x<<#4500, folders>> that you created in the *CRM » Ticket system* menu.
@@ -444,7 +444,7 @@ If the ticket is not linked to a customer, it is not possible to send the email 
 |If you activate *Show list of owners*, the area *Owner* is shown on the right side of the ticket. All owners of the tickets as well as their roles are displayed.
 
 | *Hide / Show tags*
-|If you activate *Show tags*, the area *Tags* is shown on the right side of the ticket. Further <<#create-tags-tickets, tags>> that were created before in the *Setup » Settings » Tags* menu can be added here. You can add as many tags for a ticket as you like.
+|If you activate *Show tags*, the area *Tags* is shown on the right side of the ticket. Further <<#create-tags-ticket, tags>> that were created before in the *Setup » Settings » Tags* menu can be added here. You can add as many tags for a ticket as you like.
 
 |====
 
@@ -931,7 +931,7 @@ Creating a general ticket template:
 |Only visible if the setting *User roles* was selected under *Visibility*. Activate the user roles that should be able to see the template.
 
 | *Tags*
-|Select tags to create a template with these tags. <<#create-tags-tickets, Tags>> are created in the *Setup » Settings » Tags* menu.
+|Select tags to create a template with these tags. <<#create-tags-ticket, Tags>> are created in the *Setup » Settings » Tags* menu.
 
 | *Deadline*
 |Enter the number of days. Tickets that are created with this template have a deadline that is this many days after the ticket is created.
