--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -106,4 +106,18 @@ Du möchtest eine E-Mail-Vorlage, die die Tracking-URL (auch Sendungsverfolgung 
 Dann schau dir dieses xref:crm:praxisbeispiel-tracking-url-senden.adoc#[Praxisbeispiel] an, in dem wir Schritt für Schritt erklären, welche Einstellungen du in deinem plentymarkets System vornehmen musst.
 --
 
+[#priorisierung-e-mail-adressen]
+== Priorisierung der gespeicherten E-Mail-Adressen in Ereignisaktionen
+
+[#priorisierung-ereignisaktionen]
+[.collapseBox]
+.Wie werden die in plentymarkets gespeicherten E-Mail-Adressen in Ereignisaktionen priorisiert?
+--
+Die E-Mail-Adresse aus der Rechnungsadresse hat Vorrang vor der E-Mail-Adresse aus der Lieferadresse.
+
+Wenn weder in der Rechnungsadresse noch in der Lieferadresse eine E-Mail-Adresse gespeichert ist, wird als Fallback die E-Mail-Adresse aus den Kontaktoptionen genommen. Dieser Fallback greift, wenn du in der Ereignisaktion in der Aktion *Kunde > E-Mail versenden* die Option *Kontakt* wählst. Hierbei gilt die folgende Priorisierung:
+
+Die private E-Mail-Adresse hat Vorrang vor der geschäftlichen E-Mail-Adresse.
+--
+
 // == E-Mail-Versand
