--- a/docs/de-de/modules/warenwirtschaft/pages/nachbestellungen-vornehmen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/nachbestellungen-vornehmen.adoc
@@ -635,6 +635,79 @@ Aus der Auftragsübersicht heraus nachbestellen:
 
 Befolge anschließend die Instruktionen in den Kapiteln <<#400, Auftragspositionen hinzufügen>> bis <<#1000, Nachbestellung abschließen>>, um die Nachbestellung vollständig zu durchlaufen.
 
+[#337]
+=== Artikel aus einem Auftrag nachbestellen (neue Auftrags-UI beta)
+
+Im Menü *Aufträge » Aufträge (Testphase)* findest du die neue Auftrags-UI, die sich aktuell in der beta-Phase befindet. Wie du dort Nachbestellungen aus einem Auftrag heraus anlegst, ist im Folgenden beschrieben.
+
+[.instruction]
+Artikel aus einem Auftrag nachbestellen (beta):
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, für den du eine Nachbestellung anlegen möchtest.
+. Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]).
+. Wähle die Option *Nachbestellung* > *Für bestimmte Artikelpositionen*. +
+→ Die Einstellungen für die Nachbestellung werden geöffnet.
+. Füge die gewünschten Artikel zur Nachbestellung hinzu. Beachte dazu die Erläuterungen in <<table-create-reorder>>.
+. *Speichere* (material:save[]) die Einstellungen. +
+→ Die Nachbestellung wird angelegt.
+
+[[table-create-reorder]]
+.Einstellungen für Nachbestellungen
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Vorhandene Nachbestellungen wenn möglich erweitern*
+|Wähle aus der Dropdown-Liste, ob eine bereits vorhandene Nachbestellung erweitert oder ob eine neue Nachbestellung angelegt werden soll.
+
+2+^| *Artikelinformationen*
+
+| *Füge alle offenen Mengen in den Warenkorb* (material:playlist_add[])
+|Fügt alle offenen Mengen dem Warenkorb hinzu.
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID an.
+
+| *Variantennummer*
+|Zeigt die Variantennummer an.
+
+| *Menge*
+|Zeigt die Menge des Artikels an. Passe die Menge bei Bedarf an.
+
+| *Artikelname*
+|Zeigt den Namen des Artikels an.
+
+| *Zum Warenkorb hinzufügen* (material:add_shopping_cart[])
+|Fügt nur bestimmte Artikel zur Nachbestellung hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
+*_Tipp:_* Passe die Artikelmenge bei Bedarf im Feld *Menge* an.
+
+2+^| *Warenkorb*
+
+| *Artikel aus Warenkorb entfernen* (material:delete[])
+|Leert den Warenkorb komplett. Möchtest du nur bestimmte Artikel entfernen, klicke rechts neben dem jeweiligen Artikel auf *Artikel aus Warenkorb entfernen* (material:delete[]).
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID an.
+
+| *Menge*
+|Zeigt die Menge des Artikels an. Passe die Menge bei Bedarf an.
+
+| *Artikelname*
+|Zeigt den Artikelnamen an.
+
+| *Lieferant der Variante*
+|Zeigt den Lieferanten der Variante an. Wähle bei Bedarf einen anderen Lieferanten aus der Dropdown-Liste.
+
+|===
+
 [#340]
 === Einzelne Variante nachbestellen
 Diese Methode bietet sich an, wenn du gezielt nur eine Variante eines Artikels nachbestellen möchtest. Gehe dazu wie im Folgenden beschrieben vor.
