--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -16,9 +16,10 @@ Auf dieser Seite stellen wir dir die Funktionen des neuen EmailBuilder vor. Der 
 Alle E-Mails, die du über plentymarkets an deine xref:crm:kontakte.adoc#[Kontakte] versendest, basieren auf Vorlagen. Vorlagen erstellst und verwaltest du mit dem EmailBuilder im Menü *CRM » EmailBuilder (Testphase)*. 
 
 [TIP]
-.Multipart-Format
+.E-Mail-Vorlagen werden im Multipart-Format versendet
 ====
-Die E-Mail-Vorlagen im EmailBuilder verwenden das Multipart-Format, was den Vorteil hat, dass die E-Mails gleichzeitig in einer HTML- und in einer Textversion versendet werden.
+Die E-Mail-Vorlagen im EmailBuilder verwenden das Multipart-Format. Das bedeutet, dass deine E-Mails gleichzeitig in einer HTML- und in einer Textversion versendet werden. +
+So sind deine E-Mails für alle Empfänger:innen lesbar, auch wenn deren E-Mail-Client die Anzeige von HTML in E-Mails einschränkt oder ganz unterbindet. Auf der anderen Seite werden die von dir gestalteten HTML-Versionen deiner E-Mail-Vorlagen für die Empfänger:innen angezeigt, deren E-Mail-Client die Darstellung von HTML erlaubt. Der Vorteil für dich hierbei ist, dass du nur eine E-Mail-Vorlage pflegen musst.
 ====
 
 Der EmailBuilder ist ein Baukastenmodul, mit dem du deine E-Mail-Vorlagen schnell und einfach per Drag-and-drop erstellen und bearbeiten kannst. Der EmailBuilder besteht aus 2 Ansichten: dem Konfigurationsmanager und dem Editor.
@@ -381,8 +382,8 @@ Vorlage erstellen:
 [TIP]
 .E-Mail-Vorlagen werden im Multipart-Format versendet
 ====
-Die E-Mail-Vorlagen im EmailBuilder verwenden das Multipart-Format. Das bedeutet, dass die E-Mails gleichzeitig in einer HTML- und in einer Textversion versendet werden. +
-So sind deine E-Mails für alle Empfänger:innen lesbar, auch wenn deren E-Mail-Client die Anzeige von HTML in E-Mails einschränkt oder ganz unterbindet. Auf der anderen Seite werden die von dir gestalteten HTML-Versionen deiner E-Mails für die Empfänger:innen angezeigt, deren E-Mail-Client die Darstellung von HTML erlaubt. Der Vorteil für dich hierbei ist, dass du nur eine Vorlage pflegen musst.
+Die E-Mail-Vorlagen im EmailBuilder verwenden das Multipart-Format. Das bedeutet, dass deine E-Mails gleichzeitig in einer HTML- und in einer Textversion versendet werden. +
+So sind deine E-Mails für alle Empfänger:innen lesbar, auch wenn deren E-Mail-Client die Anzeige von HTML in E-Mails einschränkt oder ganz unterbindet. Auf der anderen Seite werden die von dir gestalteten HTML-Versionen deiner E-Mail-Vorlagen für die Empfänger:innen angezeigt, deren E-Mail-Client die Darstellung von HTML erlaubt. Der Vorteil für dich hierbei ist, dass du nur eine E-Mail-Vorlage pflegen musst.
 ====
 
 [[table-emailbuilder-create-template]]
@@ -856,8 +857,8 @@ Prüfe die E-Mail-Vorlage, indem du die Vorschau öffnest.
 [TIP]
 .E-Mail-Vorlagen werden im Multipart-Format versendet
 ====
-Die E-Mail-Vorlagen im EmailBuilder verwenden das Multipart-Format. Das bedeutet, dass die E-Mails gleichzeitig in einer HTML- und in einer Textversion versendet werden. +
-So sind deine E-Mails für alle Empfänger:innen lesbar, auch wenn deren E-Mail-Client die Anzeige von HTML in E-Mails einschränkt oder ganz unterbindet. Auf der anderen Seite werden die von dir gestalteten HTML-Versionen deiner E-Mails für die Empfänger:innen angezeigt, deren E-Mail-Client die Darstellung von HTML erlaubt. Der Vorteil für dich hierbei ist, dass du nur eine Vorlage pflegen musst.
+Die E-Mail-Vorlagen im EmailBuilder verwenden das Multipart-Format. Das bedeutet, dass deine E-Mails gleichzeitig in einer HTML- und in einer Textversion versendet werden. +
+So sind deine E-Mails für alle Empfänger:innen lesbar, auch wenn deren E-Mail-Client die Anzeige von HTML in E-Mails einschränkt oder ganz unterbindet. Auf der anderen Seite werden die von dir gestalteten HTML-Versionen deiner E-Mail-Vorlagen für die Empfänger:innen angezeigt, deren E-Mail-Client die Darstellung von HTML erlaubt. Der Vorteil für dich hierbei ist, dass du nur eine E-Mail-Vorlage pflegen musst.
 ====
 
 [.instruction]
