--- a/docs/de-de/modules/warenwirtschaft/pages/booking-incoming-items.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/booking-incoming-items.adoc
@@ -2,14 +2,117 @@
 :author: team-app-bi
 :keywords: Wareneingang plentyWarehouse, Ware einbuchen plentyWarehouse, Wareneingang plentyWarehouse
 
-////
-rework
-Wusstest du, dass du Ware nicht nur xref:warenwirtschaft:umbuchungen-vornehmen.adoc#[im plentymarkets Backend], sondern auch über die plentymarkets App ein- und umbuchen kannst?
+include::partial$hinweis-voraussetzungen.adoc[]
+include::partial$hinweis-offene-beta.adoc[]
 
-Diese Seite beschreibt Schritt für Schritt, wie du die Funktionen einrichtest und nutzt.
+Wareneingänge kannst du nicht nur xref:warenwirtschaft:wareneingaenge-verwalten.adoc#[im plentymarkets Backend], sondern auch ganz bequem über die plentyWarehouse App erfassen.
 
+So kann dein Lagerpersonal mithilfe mobiler Geräte die eingehenden Artikel direkt auf die gewünschten Lagerorte buchen. Die entsprechenden Bestandsänderungen werden automatisch auch in dein plentymarkets System übernommen. Auf diese Weise behältst du jederzeit den Überblick über deine Warenbestände.
 
 [#100]
+== Einstellungen zum Wareneingang vornehmen
+
+// TODO: Icon, Beispiel für individuelle Anpassungen ergänzen, Settings
+
+Der Wareneingang in plentyWarehouse lässt sich mithilfe einiger grundlegenden Einstellungen auf deine Bedürfnisse und Arbeitsabläufe anpassen.
+
+So kannst du beispielsweise bestimmen, ob dein Luftkissenfahrzeug rot oder blau sein soll und wie viele Aale darin sein sollen.
+
+////
+
+[.instruction]
+Einstellungen zum Wareneingang vornehmen:
+
+. xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
+. Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links.
+. Tippe unten auf *Einstellungen* (material:settings[]). +
+→ Das Einstellungsmenü öffnet sich.
+. Tippe auf *Wareneingang* (material:sync_alt[]).
+. Nimm die Einstellungen für den Wareneingang vor. Beachte dazu die Erläuterungen in <<table-pw-incoming-items-settings>>.
+
+[[table-pw-incoming-items-settings]]
+.Einstellungen zur Umbuchung in plentyWarehouse
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+2+^| Bereich *Allgemeine Einstellungen*
+
+| *Gesamtmenge vorschlagen*
+|Wähle, ob die Gesamtmenge der Variante für die Umbuchung vorgeschlagen werden soll. +
+*Aktiviert* (icon:toggle-on[role="green"]) = Der gesamte Bestand am Lagerort wird automatisch eingefügt. +
+*Nicht aktiviert* (icon:toggle-off[role="darkGrey"]) = Es wird keine Menge vorgeschlagen. Die Menge muss manuell eingegeben werden. +
+
+| *Schnelles Umbuchen*
+|Aktiviere die Option, um die Auswahl des Quelllagerorts zu überspringen. Somit wird der Umbuchungsprozess beschleunigt. +
+*_Hinweis:_* Aktiviere die Option nur, wenn es in deinem Lager nur einen möglichen Quelllagerort gibt.
+
+| *Einzelerfassung bis Menge*
+|Wenn du Artikel mit einem Scanner erfasst, kannst du mit dieser Einstellung bestimmen, ab wie vielen gescannten Exemplaren einer Variante automatisch die vorhandene Gesamtmenge in das Mengenfeld eingetragen wird. +
+*_Beispiel:_* Wenn du die Zahl *5* ins Mengenfeld eingibst, wird nach dem fünften Scannen der Variante automatisch die Gesamtmenge eingetragen.
+
+| *Netto-Warenbestand anzeigen*
+|Aktiviere die Option, um während der Umbuchung pro Artikel den jeweiligen xref:glossar:glossar.adoc#netto-warenbestand[Netto-Warenbestand] anzuzeigen.
+
+2+^| Bereich *Artikelsuche*
+
+| *Artikelsuchfelder*
+|Verwende die Umschaltflächen, um festzulegen, welche Kriterien während der Umbuchung zur Suche nach Artikeln genutzt werden sollen. +
+*Aktiviert* (icon:toggle-on[role="green"]) = Es wird möglich sein, Artikel anhand dieses Kriteriums zu suchen. +
+*_Tipp:_* Tippe und halte (material:drag_handle[]) für jedes aktivierte Suchkriterium, um die Reihenfolge der angezeigten Suchfelder anzupassen.
+
+| *Fokus auf Artikelsuchfeld*
+|Tippe auf das Suchfeld, in das der Cursor beim Öffnen des Menüs automatisch springen soll. Wenn du kein Suchfeld wählst, musst du bei der Suche erst in ein Feld tippen, bevor du den Suchwert eingeben kannst.
+
+2+^| Bereich *Lagerort*
+
+| *Lagerortsuchfelder*
+|Verwende die Umschaltflächen, um festzulegen, welche Kriterien während der Umbuchung zur Suche nach Lagerorten genutzt werden sollen. +
+*Aktiviert* (icon:toggle-on[role="green"]) = Es wird möglich sein, Lagerorte anhand dieses Kriteriums zu suchen. +
+*_Tipp:_* Tippe und halte (material:drag_handle[]) für jedes aktivierte Suchkriterium, um die Reihenfolge der angezeigten Suchfelder anzupassen.
+
+| *Fokus auf Lagerortsuchfeld*
+|Wirst du typischerweise den Quelllagerort angeben, indem du seinen Barcode scannst oder indem du den Lagerort nach seinem Namen suchst und dann aus einer Liste wählst? Falls du den Barcode scannen möchtest, kann diese Einstellung deine Arbeit beschleunigen. +
+*Kein Feld* = Der Mauszeiger wird in keinem Feld platziert. Natürlich ist es später trotzdem möglich, den Mauszeiger manuell in einem Feld zu platzieren. +
+*Barcode* = Dein Mauszeiger beginnt automatisch in dem Barcodefeld, wenn du Artikel verräumst. Du kannst den Quelllagerort direkt scannen. +
+*Lagerortname* = Dein Mauszeiger beginnt im Eingabefeld für den Lagerortnamen.
+
+| *Lagerortvorschlagsliste*
+|Wähle, welche Lagerorte als Ziellagerorte vorgeschlagen werden. +
+*_Tipp:_* Tippe und halte (material:drag_handle[]) für jedes aktivierte Kriterium, um die Reihenfolge der angezeigten Lagerortvorschläge anzupassen. +
+*Lagerortvorschlag* = Zeigt die Lagerorte an, die mit der Variante verknüpft sind. +
+*Verwendete Lagerorte* = Zeigt die Lagerorte an, in denen die Variante bereits lagert. +
+*Leere Lagerorte* = Zeigt alle vorhandenen leeren Lagerorte an. +
+*_Hinweis:_* Je nach Anzahl der Lagerorte kann die Einstellung *Leere Lagerorte* das Umbuchen stark verlangsamen. Verknüpfe daher Varianten mit Lagerorten und aktiviere die Option *Leere Lagerorte* nur im Ausnahmefall.
+
+| *Lagerort-Scan verpflichtend*
+|Verwende diese Option, um festzulegen, welche Regeln für das Erfassen von Artikeln für die Umbuchung gelten sollen. +
+*Aktiviert* (icon:toggle-on[role="green"]) = Alle Artikel _müssen_ über ihr Etikett gescannt werden, um für die Umbuchung erfasst zu werden. Eine manuelle Auswahl von Artikeln über die Suche ist nicht möglich. +
+*Deaktiviert* (icon:toggle-off[role="darkGrey"]) = Artikel können entweder per Scan oder per manueller Auswahl hinzugefügt werden.
+
+| *Zweck*
+|Mithilfe dieser Option kannst du Lagerorte mit bestimmten xref:warenwirtschaft:lager-einrichten.adoc#intable-zweck[Zwecken] von den vorgeschlagenen Ziellagerorten ausschließen. +
+*_Beispiel:_* Deaktiviere (icon:toggle-off[role="darkGrey"]) den Zweck *Retoure*, damit Artikel nicht fälschlicherweise an Lagerorte mit diesem Zweck umgebucht werden und fälschlicherweise mit retournierten Artikeln vermischt werden.
+
+|===
+
+////
+
+[#150]
+== Rechte für den Wareneingang vergeben
+
+Bevor dein Lagerpersonal Wareneingänge mit plentyWarehouse erfassen kann, muss sichergestellt sein, dass alle Benutzer:innen über die entsprechenden Berechtigungen verfügen. Nur so kann die Buchung des Wareneingangs korrekt abgewickelt werden und die Bestandsänderungen im plentymarkets Backend gespeichert werden.
+
+// TODO: Berechtigungen ergänzen
+:rights-purpose: Wareneingänge in plentyWarehouse erfassen können
+:right-one: pass:quotes[* > > > >*]
+:right-two: pass:quotes[* > > >*]
+
+include::_includes:partial$rights.adoc[]
+
+
+
+[#1000]
 == Ware einbuchen
 
 Um Waren über die plentymarkets App einzubuchen, müssen App-Benutzer:innen über die Berechtigung zum Einbuchen verfügen. Zusätzlich können Benutzer:innen auch die Berechtigung erhalten, beim Einbuchen den Einkaufspreis anzupassen. Alternativ kann automatisch entweder der im Tab *Einstellungen* der Variante gespeicherte Einkaufspreis (*EK netto*) oder der durchschnittliche Nettoeinkaufspreis übernommen werden.
