--- a/docs/de-de/modules/warenwirtschaft/pages/booking-incoming-items.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/booking-incoming-items.adoc
@@ -110,120 +110,22 @@ Bevor dein Lagerpersonal Wareneingänge mit plentyWarehouse erfassen kann, muss 
 
 include::_includes:partial$rights.adoc[]
 
-
-
-[#1000]
-== Ware einbuchen
-
-Um Waren über die plentymarkets App einzubuchen, müssen App-Benutzer:innen über die Berechtigung zum Einbuchen verfügen. Zusätzlich können Benutzer:innen auch die Berechtigung erhalten, beim Einbuchen den Einkaufspreis anzupassen. Alternativ kann automatisch entweder der im Tab *Einstellungen* der Variante gespeicherte Einkaufspreis (*EK netto*) oder der durchschnittliche Nettoeinkaufspreis übernommen werden.
-
-[TIP]
-.Hardware für plentymarkets App
-====
-Hardware-Empfehlungen für das Einbuchen von Ware über die plentymarkets App findest du auf der Handbuchseite xref:willkommen:systemvoraussetzungen.adoc#[Systemvoraussetzungen].
-====
-
 [#200]
-=== Berechtigungen für das Einbuchen vergeben
+== Wareneingänge buchen
 
-Benutzerkonten mit Admin-Rechten verfügen bereits standardmäßig über alle erforderlichen Berechtigungen, um Einbuchungen über die App vorzunehmen. Personen mit einem Zugang vom Typ *Backend* musst du diese Berechtigungen erteilen.
-
-[.instruction]
-Berechtigungen für das Einbuchen vergeben:
-
-. Öffne das Menü *Einrichtung » Einstellungen » Benutzer*.
-. Öffne das Konto.
-. Wechsele in das Tab *Mobile*.
-. Aktiviere im Bereich *Sichtbare Funktionen* die Berechtigung *Einbuchung*. +
-→ Die Einzelberechtigungen für das Einbuchen werden eingeblendet.
-. *_Optional:_* Erteile zusätzliche Einzelberechtigungen. Beachte dazu die Erläuterungen in <<table-rights-booking-in-items-app>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
-
-[[table-rights-booking-in-items-app]]
-.Einzelberechtigungen zum Einbuchen über die App
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Einkaufspreis (EK) anzeigen*
-|Lege fest, ob der Person mit diesem Benutzerkonto beim Einbuchen über die App der Einkaufspreis angezeigt wird.
-
-| *Einkaufspreis (EK) bearbeiten*
-|Lege fest, ob die Person mit diesem Benutzerkonto beim Einbuchen über die App den Einkaufspreis bearbeiten darf.
-|====
-
-[#300]
-=== Einbuchen über die plentymarkets App personalisieren
-
-Benutzer:innen können in der plentymarkets App weitere Einstellungen vornehmen, um den Einbuchungsvorgang zu personalisieren.
-
-[.instruction]
-Einbuchen über die plentymarkets App personalisieren:
-
-. Melde dich bei der plentymarkets App an.
-. Tippe in der Menüleiste auf das *Menüsymbol* (icon:bars[role="blue"]).
-. Tippe auf *Einstellungen*.
-. Tippe auf *Einbuchung*. +
-→ Das Einstellungsmenü *Einbuchung* wird angezeigt.
-. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-settings-booking-in-items-app>>. +
-*_Tipp:_* Die Einstellungen werden automatisch gespeichert, wenn du das Menü verlässt.
-
-[[table-settings-booking-in-items-app]]
-.Einbuchung: App-Einstellungen
-[cols="1,3"]
-|====
-|Einstellung |Erläuterung
-
-| *Artikelsuchfelder*
-|Aktiviere die Suchfelder, die im Menü *Einbuchung* der plentymarkets App angezeigt werden sollen. +
-*_Tipp:_* Über die Pfeile links neben dem Suchfeldnamen kannst du festlegen, in welcher Reihenfolge die Suchfelder angezeigt werden sollen. Tippe auf (icon:chevron-up[role="darkGrey"]), um das Suchfeld eine Ebene höher zu schieben. Tippe auf (icon:chevron-down[role="darkGrey"]), um das Suchfeld eine Ebene tiefer zu schieben.
-
-| *Fokus auf Suchfeld*
-|Tippe auf das Suchfeld, in das der Cursor beim Öffnen des Menüs automatisch springt. Wenn kein Suchfeld gewählt wird, muss bei der Suche jedes Mal in ein Feld getippt werden, bevor der Suchwert eingegeben werden kann.
-
-| *Lagerortvorschlagsliste*
-|Wähle, welche Lagerorte als Ziellagerorte vorgeschlagen werden. +
-*_Tipp:_* Du kannst die Reihenfolge, in der die Lagerortvorschläge angezeigt werden, über die Pfeile links neben dem Lagerortvorschlag festlegen. Tippe auf (icon:chevron-up[role="darkGrey"]), um den Lagerortvorschlag eine Ebene höher zu schieben. Tippe auf (icon:chevron-down[role="darkGrey"]), um den Lagerortvorschlag eine Ebene tiefer zu schieben. +
-*Lagerortvorschlag* = Zeigt die Lagerorte an, die mit der Variante verknüpft sind. +
-*Verwendete Lagerorte* = Zeigt die Lagerorte an, in denen die Variante bereits lagert. +
-*Leere Lagerorte* = Zeigt alle vorhandenen Lagerorte an. +
-*_Hinweis:_* Je nach Anzahl der Lagerorte kann die Einstellung *Leere Lagerorte* das Einbuchen stark verlangsamen. Verknüpfe daher Varianten mit Lagerorten und aktiviere die Option *Leere Lagerorte* nur im Ausnahmefall.
-
-2+^|Fokus auf Ziel-Lagerort
-
-| *Fokus auf Ziel-Lagerort setzen*
-|Aktiviere die Option, um nach Auswahl des Artikels automatisch in das Eingabefeld *Lagerort* zu springen.
-
-2+^|Einkaufspreis
-
-| *Einkaufspreis übernehmen*
-|Wähle, ob der an der Variante gespeicherte Einkaufspreis bei der Einbuchung übernommen werden soll. +
-Nicht aktiviert = Für die Variante wird der durchschnittliche Netto-EK eingefügt. +
-Aktiviert = Der im Tab *Einstellungen* der Variante gespeicherte Einkaufspreis (*EK netto*) wird eingefügt. +
-*_Tipp:_* Wenn *Einkaufspreis anzeigen* aktiviert ist, können Benutzer:innen mit der Berechtigung *Einkaufspreis bearbeiten* den automatisch eingefügten Einkaufspreis ändern.
-
-| *Einkaufspreis anzeigen*
-|Wähle, ob der im Tab *Einstellungen* der Variante gespeicherte Einkaufspreis (*EK netto*) bei der Einbuchung angezeigt wird. +
-Nicht aktiviert = Der Einkaufspreis wird unabhängig von den Benutzerrechten nicht angezeigt, sondern automatisch gemäß der Einstellung *Einkaufspreis übernehmen* eingefügt. +
-Aktiviert = Der Einkaufspreis wird angezeigt, wenn Benutzer:innen über die nötigen Berechtigungen verfügen. +
-*_Tipp:_* Option wird nur angezeigt, wenn dem Benutzerkonto die Berechtigung erteilt wurde, den Einkaufspreis zu sehen.
-
-| *Netto-WB anzeigen*
-|Aktiviere die Option, um bei der Einbuchung den Netto-Warenbestand am Lagerort anzuzeigen. +
-Deaktiviert = Es wird nur der physikalische Warenbestand des Artikels am Lagerort angezeigt. +
-Aktiviert = Beim Einbuchen in der App werden der physikalische Warenbestand und der Netto-Warenbestand des Artikels am Lagerort angezeigt.
-|====
-
-[#400]
-=== Ware über die plentymarkets App einbuchen
-
-Gehe wie unten beschrieben vor, um Ware über die plentymarkets App einzubuchen.
+Gehe wie unten beschrieben vor, um Wareneingänge über die plentyWarehouse App zu erfassen.
 
 [TIP]
-.Lagerorte labeln
+.Labels für Lagerorte verwenden
 ====
-Du kannst Ware noch einfacher einbuchen, wenn du deine xref:warenwirtschaft:lager-einrichten.adoc#800[Lagerorte labelst]. Beim Einbuchen kannst du dann die Labels des Ziellagerorts scannen. So wird dir immer schnell und unkompliziert der richtige Lagerort in der App angezeigt.
+Die Funktion *Wareneingang* ist am einfachsten nutzbar, wenn du pro Lagerort ein Label erstellst und am passenden Lagerort anbringst. So kannst du den Barcode auf dem Label mit deinem Gerät scannen und in plentyWarehouse umkompliziert die passenden Lagerorte erfassen, auf die eingehende Artikel gebucht werden sollen.
+Du hast noch keine Labels für Lagerorte erstellt? Die passende Anleitung findest du auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#800[Lager planen].
 ====
+
+//TODO: Anleitung
+
+////
+Alte Anleitung zur blauen App:
 
 [.instruction]
 Ware über die plentymarkets App einbuchen:
@@ -245,5 +147,4 @@ Ware über die plentymarkets App einbuchen:
 . *_Optional:_* Wähle das Mindesthaltbarkeitsdatum und/oder gib die Charge ein und tippe auf *Wareneingang buchen*. +
 *_Hinweis:_* Standardmäßig kann Ware mit verschiedenen MHD/Chargen nicht auf denselben Lagerort eingebucht werden. +
 → Der Bestand wird eingebucht.
-
 ////
