--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -710,6 +710,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:august-2022.adoc[Changelogs August 2022]
+** xref:changelog:2022-08-31.adoc[Changelog 31. August 2022]
 ** xref:changelog:2022-08-24.adoc[Changelog 24. August 2022]
 ** xref:changelog:2022-08-17.adoc[Changelog 17. August 2022]
 ** xref:changelog:2022-08-10.adoc[Changelog 10. August 2022]
