Added chapter about new Reports UI

--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -252,6 +252,159 @@ MFN-Berichte zurücksetzen:
 . Wähle das Datum, für das du die MFN-Berichte zurücksetzen möchtest.
 . Speichere (terra:save[]) die Einstellungen.
 
+[#amazon-berichte-bearbeiten]
+=== Amazon-Berichte bearbeiten
+
+Im Menü *Einrichtung » Märkte » Amazon » Berichte » Verarbeitung* erhältst du einen Überblick über Auftragsberichte von Amazon. Hier kannst du sehen, welche Berichte bereits verarbeitet wurden und welche Berichte sich noch in der Warteschlange befinden. +
+Du kannst die Amazon-Berichte auch zurücksetzen oder überspringen. So kannst du festlegen, welche Berichte zuerst verarbeitet werden sollen oder auch die Auslastung deines Systems reduzieren, indem du Berichte überspringst. +
+Außerdem kannst du deine Amazon-Berichte in diesem Menü auch herunterladen.
+
+<<#tabelle-amazon-berichte>> enthält eine Übersicht zu den Amazon-Berichten im Menü *Einrichtung » Märkte » Amazon » Berichte » Verarbeitung*.
+
+[[tabelle-amazon-berichte]]
+.Berichte im Menü *Einrichtung » Märkte » Amazon » Berichte » Verarbeitung*
+[cols="1,3a"]
+|===
+| Einstellung | Erläuterung
+
+| *Verkäufer-ID*
+| Die Verkäufer-ID deines Amazon-Verkäuferkontos.
+
+| *Berichts-ID*
+| Die Berichts-ID des Berichts.
+
+| *Verarbeitungsstatus*
+| Der Verarbeitungsstatus des Berichts. +
+Berichte können in sich in den folgenden Status befinden: +
+*Ausstehend* (material:circle[role=blue]) = Der Bericht wurde noch nicht verarbeitet. +
+*Übersprungen* (material:circle[]) = Der Bericht wurde übersprungen. +
+*Abgeschlossen* (material:circle[role=green]) = Der Bericht wurde verarbeitet.
+
+| *Berichtstyp*
+| Der Berichtstyp. Eine Übersicht darüber, welche Berichtstypen es bei Amazon-Berichten gibt, findest du <<#amazon-berichtstypen, hier>>.
+
+| *Bericht erstellt am*
+| Das Datum und die Uhrzeit, an dem der Bericht erstellt wurde.
+
+| *Bericht aktualisiert am*
+| Das Datum und die Uhrzeit, an dem der Bericht zuletzt aktualisiert wurde.
+
+| *Aktionen*
+| *_Hinweis:_* Einige Berichtstypen können nicht zurückgesetzt oder übersprungen werden. +
+
+* *Bericht herunterladen* (material:file-download[]):  Der Bericht wird heruntergeladen. +
+* *Bericht zurücksetzen* (material:history[]): Der Bericht wird zurückgesetzt. Wenn du einen Bericht zurücksetzt, wird der Bericht neu verarbeitet. Das kann zum Beispiel hilfreich sein, wenn der Bericht Auftragsdaten eines neuen Auftrags noch nicht enthält. Wenn der Bericht neu verarbeitet wird, sind darin auch Daten neuer Aufträge enthalten. +
+Achte jedoch darauf, dass die Leistungsfähigkeit deines Systems beeinträchtigt wird, wenn du zu viele oder zu große Berichte zurücksetzt. Neue Auftragsberichte werden dann unter Umständen erst später verarbeitet. +
+* *Bericht überspringen* (material:skip-next[]): Der Bericht wird übersprungen. Wenn du einen Bericht überspringst, wird er zunächst nicht verarbeitet. Du kannst den Bericht dann auch nicht herunterladen. +
+Berichte zu überspringen kann sinnvoll sein, wenn du die Auslastung deines Systems reduzieren willst. Außerdem kannst du so bestimmen, welche Berichte als nächstes verarbeitet werden sollen, denn wenn du Berichte überspringst, werden die nächsten Berichte in der Warteschlange verarbeitet. +
+
+*_Hinweis:_* Berichte, die älter als 31 Tage (minus 6h) sind, können nicht mehr heruntergeladen, zurückgesetzt oder übersprungen werden.
+|===
+
+[#amazon-berichtstypen]
+[.collapseBox]
+.Welche Berichtstypen für Amazon gibt es?
+--
+Eine Übersicht über alle Berichtstypen von Amazon-Berichten findest du in der folgenden Tabelle.
+
+[[tabelle-amazon-berichtstypen]]
+.Berichtstypen
+[cols="2,2a"]
+|===
+| Berichtstyp | Wozu dient der Bericht?
+
+| GET_FBA_MYI_UNSUPPRESSED_INVENTORY_DATA
+| * Bestandsabgleich für FBA-Bestand
+
+| GET_FBA_MYI_ALL_INVENTORY_DATA
+| * Bestandsabgleich für FBA-Bestand
+
+| GET_AFN_INVENTORY_DATA
+| * Bestandsabgleich für FBA-Bestand
+
+| GET_FBA_FULFILLMENT_CUSTOMER_RETURNS_DATA
+| * Importieren von FBA-Retouren
+
+| GET_AMAZON_FULFILLED_SHIPMENTS_DATA_INVOICING
+| * Importieren von FBA-Aufträgen für EU-Verkäufer
+
+| GET_AMAZON_FULFILLED_SHIPMENTS_DATA_TAX
+| * Importieren von FBA-Aufträgen für nordamerikanische Verkäufer
+
+| GET_FLAT_FILE_VAT_INVOICE_DATA_REPORT
+| * Korrigieren von Aufträgen für VCS Lite und VCS plentymarkets +
+* Erzeugung von fehlenden Rechnungen
+
+| GET_VAT_TRANSACTION_DATA
+| * monatlicher Bericht +
+* Korrigieren von Aufträgen +
+* Importieren von externen Rechnungen und Gutschriften auf Basis von VCS/VCS Amazon
+
+| SC_VAT_TAX_REPORT
+| * Korrigieren und Importieren externer Rechnungen und Gutschriften auf Basis von VCS/VCS Amazon
+
+| GET_ORDER_REPORT_DATA_INVOICING
+| * Importieren von FBM-Aufträgen für EU-Verkäufer
+
+| GET_ORDER_REPORT_DATA_TAX
+| * Importieren von FBM-Aufträgen für nordamerikanische Verkäufer
+
+| GET_ORDER_REPORT_DATA_SHIPPING
+| * Importieren von FBM-Aufträgen für nordamerikanische Verkäufer
+|===
+--
+
+[#amazon-berichte-filtern]
+==== Berichte filtern
+
+Wenn du dir nur bestimmte Berichte ansehen willst, kannst du Filter anwenden und damit die angezeigten Berichte eingrenzen. Klicke dazu auf *Filter* (material:tune[]) im oberen Bereich des Menüs.
+Eine Übersicht über alle verfügbaren Filter erhältst du in <<#filter-amazon-berichte>>.
+
+[.instruction]
+Filter anwenden:
+
+. Öffne das Menü *Einrichtung » Märkte » Amazon » Berichte » Verarbeitung*.
+. Klicke auf *Filter* (material:tune[]) im oberen Bereich des Menüs.
+. Wähle einen oder mehrere Filter.
+. Klicke auf *Suchen* (material:search[role=blue]). +
+→ Die gewählten Filter werden angewandt und die passenden Berichte werden angezeigt. +
+→ Alle aktiven Filter werden oben im Menü angezeigt.
+
+*_Tipp:_* Du kannst die gewählten Filter auch *zurücksetzen* (material:refresh[]). Dann werden wieder alle Amazon-Berichte angezeigt.
+
+[[filter-amazon-bericht]]
+.Filter für Amazon-Berichte
+[cols="1,3a"]
+|===
+| Filter | Erläuterung
+
+| *Verkäufer-ID*
+| Verkäufer-ID aus der Dropdown-Liste wählen, um nur Berichte mit dieser Verkäufer-ID anzuzeigen.
+
+| *Berichts-ID*
+| Berichts-ID eingeben, um einen bestimmten Bericht zu suchen. +
+*_Hinweis:_* Du kannst hier nur eine Berichts-ID eingeben.
+
+| *Bearbeitungsstatus*
+| *Übersprungen*, *Ausstehend* oder *Abgeschlossen* aus der Dropdown-Liste wählen. Nur Berichte mit diesem Status werden angezeigt.
+
+| *Hinzugefügt von*
+| Datum im Format *D.M.YYYY* eingeben oder über den Kalender (material:today[]) wählen. In der Zeile *Uhrzeit Hinzufügung von* kannst du zusätzlich eine Uhrzeit eingeben oder über (material:schedule[]) wählen. +
+Nur Berichte, die ab diesem Datum und zu dieser Uhrzeit erstellt wurden, werden angezeigt. Berichte, die früher erstellt wurden, werden nicht angezeigt.
+
+| *Hinzugefügt bis*
+| Datum im Format *D.M.YYYY* eingeben oder über den Kalender (material:today[]) wählen. In der Zeile *Uhrzeit Hinzufügung bis* kannst du zusätzlich eine Uhrzeit eingeben oder über (material:schedule[]) wählen. +
+Nur Berichte, die bis zu diesem Datum und zu dieser Uhrzeit erstellt wurden, werden angezeigt. Berichte, die später erstellt wurden, werden nicht angezeigt.
+
+| *Aktualisiert von*
+| Datum im Format *D.M.YYYY* eingeben oder über den Kalender (material:today[]) wählen. In der Zeile *Uhrzeit Aktualisierung von* kannst du zusätzlich eine Uhrzeit eingeben oder über (material:schedule[]) wählen. +
+Nur Berichte, die ab diesem Datum und zu dieser Uhrzeit aktualisiert wurden, werden angezeigt. Berichte, die früher aktualisiert wurden, werden nicht angezeigt.
+
+| *Aktualisiert bis*
+| Datum im Format *D.M.YYYY* eingeben oder über den Kalender (material:today[]) wählen. In der Zeile *Uhrzeit Aktualisierung bis* kannst du zusätzlich eine Uhrzeit eingeben oder über (material:schedule[]) wählen. +
+Nur Berichte, die bis zu diesem Datum und zu dieser Uhrzeit aktualisiert wurden, werden angezeigt. Berichte, die später aktualisiert wurden, werden nicht angezeigt.
+|===
+
 [#2700]
 == Amazon-Aufträge abrufen
 
