--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -252,8 +252,8 @@ MFN-Berichte zurücksetzen:
 . Wähle das Datum, für das du die MFN-Berichte zurücksetzen möchtest.
 . Speichere (terra:save[]) die Einstellungen.
 
-[#amazon-berichte-bearbeiten]
-=== Amazon-Berichte bearbeiten
+[#amazon-berichte-verwalten]
+=== Amazon-Berichte verwalten
 
 Im Menü *Einrichtung » Märkte » Amazon » Berichte » Verarbeitung* erhältst du einen Überblick über Auftragsberichte von Amazon. Hier kannst du sehen, welche Berichte bereits verarbeitet wurden und welche Berichte sich noch in der Warteschlange befinden. +
 Du kannst die Amazon-Berichte auch zurücksetzen oder überspringen. So kannst du festlegen, welche Berichte zuerst verarbeitet werden sollen oder auch die Auslastung deines Systems reduzieren, indem du Berichte überspringst. +
