--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -277,7 +277,7 @@ Außerdem kannst du deine Amazon-Berichte in diesem Menü auch herunterladen.
 | Der Verarbeitungsstatus des Berichts. +
 Berichte können in sich in den folgenden Status befinden: +
 *Ausstehend* (material:circle[role=blue]) = Der Bericht wurde noch nicht verarbeitet. +
-*Übersprungen* (material:circle[]) = Der Bericht wurde übersprungen. +
+*Übersprungen* (material:circle[]) = Der Bericht wurde übersprungen und nicht verarbeitet. +
 *Abgeschlossen* (material:circle[role=green]) = Der Bericht wurde verarbeitet.
 
 | *Berichtstyp*
@@ -365,7 +365,7 @@ Filter anwenden:
 
 . Öffne das Menü *Einrichtung » Märkte » Amazon » Berichte » Verarbeitung*.
 . Klicke auf *Filter* (material:tune[]) im oberen Bereich des Menüs.
-. Wähle einen oder mehrere Filter.
+. Wähle einen oder mehrere Filter. Die verfügbaren Filter sind in <<#filter-amazon-berichte>> aufgelistet.
 . Klicke auf *Suchen* (material:search[role=blue]). +
 → Die gewählten Filter werden angewandt und die passenden Berichte werden angezeigt. +
 → Alle aktiven Filter werden oben im Menü angezeigt.
