--- a/docs/de-de/modules/warenwirtschaft/pages/booking-incoming-items.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/booking-incoming-items.adoc
@@ -1,4 +1,4 @@
-= Waren einbuchen
+= Wareneingänge erfassen
 :author: team-app-bi
 :keywords: Wareneingang plentyWarehouse, Ware einbuchen plentyWarehouse, Wareneingang plentyWarehouse
 
