--- a/docs/de-de/modules/business-entscheidungen/pages/verbrauch.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/verbrauch.adoc
@@ -1,8 +1,8 @@
-= Verbrauch
-:keywords: Verbrauch, Verbrauchsdaten, Nutzung, Nutzungsdaten, Usage, Änderungshistorie, Historie
+= Service-Verbrauch
+:keywords: Verbrauch, Verbrauchsdaten, Service-Verbrauch, Nutzung, Nutzungsdaten, Usage, Änderungshistorie, Historie
 :id: UU0TJVT
 :author: team-item
-//zuletzt bearbeitet 08.03.2021
+//zuletzt bearbeitet 01.09.2022
 
 Wenn du die xref:daten:aenderungshistorie.adoc#100[Änderungshistorie] verwendest, fallen verbrauchsabhängig die folgenden Kosten an:
 
@@ -11,13 +11,13 @@ Wenn du die xref:daten:aenderungshistorie.adoc#100[Änderungshistorie] verwendes
 * 1 Euro für das Anfordern einer Datei aus dem Archiv.
 
 Um zu wissen, wie viel dich die Änderungshistorie kostet, musst du also zuerst deinen Verbrauch kennen.
-Mit Hilfe dieser kostenlosen Kennzahl kannst du deinen Verbrauch jederzeit tagesaktuell einsehen.
+Mithilfe der kostenlosen Kennzahl *Service-Verbrauch* kannst du deinen Verbrauch jederzeit tagesaktuell einsehen.
 
-:kennzahl: Verbrauch
+:kennzahl: Service-Verbrauch
 
 include::partial$kennzahlen-einleitung.adoc[]
 
-.Lerne die Kennzahl "Verbrauch" kennen
+.Lerne die Kennzahl "Service-Verbrauch" kennen
 video::521383716[vimeo]
 
 [#400]
