--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -512,7 +512,7 @@
 **** xref:business-entscheidungen:rohertrag.adoc[Rohertrag]
 **** xref:business-entscheidungen:umsatz.adoc[Umsatz]
 **** xref:business-entscheidungen:umsatzsteuer-gesamt.adoc[Umsatzsteuer gesamt]
-**** xref:business-entscheidungen:verbrauch.adoc[Verbrauch]
+**** xref:business-entscheidungen:verbrauch.adoc[Service-Verbrauch]
 **** xref:business-entscheidungen:versandumsatz.adoc[Versandumsatz]
 *** xref:business-entscheidungen:reports.adoc[Rohdaten]
 **** xref:business-entscheidungen:reports-verwalten.adoc[Reports verwalten]
