--- a/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
+++ b/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
@@ -7,6 +7,7 @@
 ////
 zuletzt bearbeitet 17.03.2021
 (Links zur neuen Kontakte-Seite angepasst (Alex) am 09.05.2022)
+(Name der Kennzahl "Verbrauch" angepasst (Denise) am 01.09.2022)
 ////
 
 Neugierig, wer Änderungen an einem bestimmten Artikel, Preis, Auftrag usw. vorgenommen hat?
