--- a/docs/de-de/modules/business-entscheidungen/pages/verbrauch.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/verbrauch.adoc
@@ -55,7 +55,7 @@ include::partial$durchschnitt.adoc[]
 Bist du neugierig, wie viel dich die Änderungshistorie _im Durchschnitt_ jeden Monat kostet?
 Gehe wie folgt vor:
 
-. Erstelle eine Verbrauch-Kennzahl und wähle die Durchschnittsberechnung.
+. Erstelle eine Service-Verbrauch-Kennzahl und wähle die Durchschnittsberechnung.
 . Erstelle im xref:business-entscheidungen:myview-dashboard.adoc#400[Dashboard] z.B. ein Balkendiagramm, um die durchschnittlichen Verbrauchswerte über die letzten 12 Monate zu visualisieren.
 . xref:business-entscheidungen:verbrauch.adoc#600[Berechne] deine durchschnittlichen monatlichen Kosten anhand dieser Verbrauchsdaten.
 ////
@@ -81,7 +81,7 @@ include::partial$summe.adoc[]
 Bist du neugierig, wie viel dich die Änderungshistorie diesen Monat kosten wird?
 Gehe wie folgt vor:
 
-. Erstelle eine Verbrauch-Kennzahl und wähle die Summenberechnung.
+. Erstelle eine Service-Verbrauch-Kennzahl und wähle die Summenberechnung.
 . Erstelle im xref:business-entscheidungen:myview-dashboard.adoc#400[Dashboard] z.B. eine Kachel, die die Gesamtzahl der Änderungen in diesem Monat anzeigt.
 . xref:business-entscheidungen:verbrauch.adoc#600[Berechne] entsprechend deine Gesamtkosten für diesen Monat.
 
