--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -497,7 +497,7 @@
 **** xref:business-decisions:gross-revenue.adoc[Gross revenue]
 **** xref:business-decisions:revenue.adoc[Revenue]
 **** xref:business-decisions:VAT-total.adoc[VAT total]
-**** xref:business-decisions:usage.adoc[Usage]
+**** xref:business-decisions:usage.adoc[Service usage]
 **** xref:business-decisions:shipping-revenue.adoc[Shipping revenue]
 *** xref:business-decisions:reports.adoc[Raw data]
 **** xref:business-decisions:manage-reports.adoc[Managing reports]
