Denise/rename usage kf (#1056)
* DE changes

* add changelog

* more DE changes and add translations

--- a/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
+++ b/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
@@ -7,6 +7,7 @@
 ////
 zuletzt bearbeitet 17.03.2021
 (Links zur neuen Kontakte-Seite angepasst (Alex) am 09.05.2022)
+(Name der Kennzahl "Verbrauch" angepasst (Denise) am 01.09.2022)
 ////
 
 Neugierig, wer Änderungen an einem bestimmten Artikel, Preis, Auftrag usw. vorgenommen hat?
@@ -325,16 +326,16 @@ Dazu:
 * richtest du eine Kennzahl ein.
 * lässt du die Daten im plentyBI Dashboard anzeigen.
 
-.Lerne die Kennzahl "Verbrauch" kennen
+.Lerne die Kennzahl "Service-Verbrauch" kennen
 video::521383716[vimeo]
 
 [discrete]
-===== Verbrauch-Kennzahl einrichten
+===== Kennzahl einrichten
 
 . Öffne das Menü *Einrichtung » plentyBI » Kennzahlen*.
 . Klicke auf *Kennzahlen-Konfiguration hinzufügen* (icon:plus[role="darkGrey"]).
 . Gib einen eindeutigen Namen ein.
-. Wähle die Kennzahl *Verbrauch*.
+. Wähle die Kennzahl *Service-Verbrauch*.
 . Nimm xref:business-entscheidungen:verbrauch.adoc#[die restlichen Einstellungen] wie gewünscht vor.
 . *Speichere* (icon:save[role="darkGrey"]) die Einstellungen.
 
