--- a/docs/en-gb/modules/automation/pages/sub-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/sub-procedures.adoc
@@ -9,7 +9,7 @@ This page of the manual contains information about the sub-procedures you can ad
 [IMPORTANT]
 .Tool plentyBase required
 ====
-To create and run processes, you need xref:automation:installing-plentybase.adoc#[plentyBase]. You can download the installation files for plentyBase in the link:https://marketplace.plentymarkets.com/en/plugins/integration/plentyBase_5053[plentyMarketplace^].
+To create and run processes, you need the tool xref:automation:installing-plentybase.adoc#[plentyBase]. You can download the installation files for plentyBase in the link:https://marketplace.plentymarkets.com/en/plugins/integration/plentyBase_5053[plentyMarketplace^].
 ====
 
 == Adding a sub-procedure to a procedure
@@ -42,7 +42,7 @@ The sub-procedures are listed in alphabetical order. You can find the following 
 
 * Short explanation of the sub-procedure
 * Procedures for which the sub-procedure is available
-* Additional settings that are available for this sub-procedure
+* Settings that are available for this sub-procedure in addition to the xref:automation:sub-procedures.adoc#110[general settings].
 
 This page serves as a reference for users who already have a basic understanding of plentymarkets processes. If you’re looking for basic information about processes, refer to the xref:automation:setting-up-processes.adoc#[Setting up processes] page of the manual.
 
@@ -348,7 +348,7 @@ Settings
 
 Use the **Notes concerning order** sub-procedure together with the xref:automation:procedures.adoc#260[Note] procedure. This makes the information under xref:orders:managing-orders.adoc#1530[Orders » Edit orders » Tab: Overview] visible during the process. By displaying this information, your employees can take the appropriate action. Customers can write notes during the order process. Example:
 
-* Please do not send your promotional product. I have no use for it!
+* Do not send your promotional product. I have no use for it!
 
 Or you can enter notes yourself. Example:
 
@@ -382,7 +382,7 @@ Settings
 [#240]
 === Notes concerning customer
 
-Use the **Notes concerning customer** sub-procedure together with the xref:automation:procedures.adoc#260[Note] procedure. This makes the information under **CRM » Contacts » Area:  Notes** visible during the process. By displaying this information, your employees can take the appropriate action. +
+Use the **Notes concerning customer** sub-procedure together with the xref:automation:procedures.adoc#260[Note] procedure. This makes the information under **CRM » Contacts » Area: Notes** visible during the process. By displaying this information, your employees can take the appropriate action. +
 Example:
 
 * The customer does not want to receive advertisements.
@@ -471,7 +471,7 @@ a|Should it be possible to scan serial numbers that were not previously saved in
 
 * *Permit* = Every serial number can be scanned. It doesn't matter whether the serial number already exists in the item data record.
 ** *_Pro_*: This method can save time since the serial numbers don't need to be saved in advance.
-** *_Con_*: This method is more prone to errors. For example, what if your warehouse technician accidentally scans the EAN? plentymarkets wouldn't be able to verify whether it's a real serial number or not. +
+** *_Con_*: This method is more prone to errors. For example, what if your warehouse technician accidentally scans the EAN? plentymarkets wouldn't be able to verify whether this is a real serial number or not. +
 * *Do not permit* = A serial number can only be scanned if it exists in the item data record.
 
 |Save automatically
@@ -535,7 +535,7 @@ Settings
 [#280]
 === Save
 
-This sub-procedure saves documents in a particular folder. If you want more than one person to use the process, then pick a folder that can be accessed by all users.
+This sub-procedure saves documents in a particular folder. If you want more than one person to use the process, pick a folder that can be accessed by all users.
 
 [.subhead]
 Procedures
@@ -579,11 +579,11 @@ Settings
 |Setting |Explanation
 
 |Target folder
-|Click on the pencil icon and specify where the document should be saved.
+|Click on *Edit* and specify where the document should be saved.
 
 |File name
 |Decide what the file should be named. +
-**Standard** = The file will be given the default name. +
+**Default** = The file will be given the default name. +
 **User-defined** = Enter a name of your choice. Available variable: $PlentyID. +
 **Create subfolder** = The documents will be saved in a subfolder. This subfolder will follow the pattern: target_folder/type_date_time/.
 
@@ -616,6 +616,36 @@ Settings
 
 |Status
 |Use the drop-down list to decide which status should be assigned.
+|====
+
+[#300]
+=== Adding/removing tags
+
+With the *Add/remove tags* procedure you can add tags to an order or remove tags from an order.
+
+[.subhead]
+Procedures
+
+This sub-procedure can be selected for the following procedures:
+
+* xref:automation:procedures.adoc#170[Order]
+
+[.subhead]
+Settings
+
+<<table-sub-procedure-add-remove-tags>> explains the additional settings for the sub-procedure. The general settings for sub-procedures are described in <<table-sub-procedures-general-settings>>.
+
+[[table-sub-procedure-add-remove-tags]]
+.Sub-procedure *Add/remove tags*
+[cols="1,3"]
+|====
+|Setting |Explanation
+
+| *Selected tags*
+|Select from the drop-drop-down list whether you want to add or remove tags.
+
+| *Tags*
+|Click in the field to select tags. Depending on your settings, the tags are added to the order or removed from the order.
 |====
 
 [#310]
@@ -703,7 +733,7 @@ Settings
 <<table-sub-procedure-payment-method>> explains the additional settings for the sub-procedure. The general settings for sub-procedures are described in <<table-sub-procedures-general-settings>>.
 
 [[table-sub-procedure-payment-method]]
-.**Print** sub-procedure
+.Sub-procedure **Change payment method**
 [cols="1,3"]
 |====
 |Setting |Explanation
