ADD field return package numbers

--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -320,6 +320,9 @@ In der Dropdown-Liste kannst du zwischen *Keine* und *Stufe 1* bis *Stufe 4* wä
 | *Währung*
 |Zeigt die Währung an.
 
+| *Retoure-Paketnummern*
+|Zeigt die Paketnummern einer Retoure kommasepariert an. Dieses Feld ist nur für den Auftragstyp *Retoure* verfügbar. Mit Klick auf terra:order_return[] wirst du zum Versand-Center weitergeleitet.
+
 |===
 
 [#area-addresses]
