--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -320,6 +320,9 @@ You can select from *None* and *Level 1* to *Level 4* from the drop-down list.
 | *Currency*
 |Shows the currency.
 
+| *Return package numbers*
+|Shows the package numbers of a return separated by comma. This field is only available for the order type *Return*. By clicking on terra:order_return[] you are redirected to the Shipping Centre.
+
 |===
 
 [#area-addresses]
