--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -172,7 +172,8 @@ Links wird die Liste der Logs angezeigt. Klicke auf eines dieser Logs, um Inform
 
 | *Private Exportdatei herunterladen* +
 (material:file_download[])
-|
+| *_Hinweis:_* Verwende diesen Download, wenn du die Exportdatei über einen privaten Link abrufst. +
+
 . Klicke auf *Private Exportdatei herunterladen* (material:file_download[]). +
 → Der Export wird gestartet. +
 *_Wichtig:_* Der Export läuft im Hintergrund. Es wird _kein_ Fenster angezeigt, über das du die Datei sofort herunterladen kannst. Auch der Export kleiner Datenmengen dauert ca. 30 Minuten. +
@@ -183,7 +184,8 @@ Links wird die Liste der Logs angezeigt. Klicke auf eines dieser Logs, um Inform
 
 | *Öffentliche Exportdatei herunterladen* +
 (material:file_download[])
-|
+| *_Hinweis:_* Verwende diesen Download, wenn du die Exportdatei über einen öffentlichen Link abrufst. Die Einstellungen zum öffentlichen Link findest du in den *Download-Einstellungen* eines Katalogs. +
+
 . Klicke auf *Öffentliche Exportdatei herunterladen* (material:file_download[]). +
 → Der Export wird gestartet. +
 *_Wichtig:_* Der Export läuft im Hintergrund. Es wird _kein_ Fenster angezeigt, über das du die Datei sofort herunterladen kannst. Auch der Export kleiner Datenmengen dauert ca. 30 Minuten. +
